--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../itch/city-smashin-critters/city-smashin-critters_v0.1.0.html"
+export_path="../../itch/city-smashin-critters/v0.1.1/city-smashin-critters_v0.1.1.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -29,13 +29,13 @@ vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
-html/canvas_resize_policy=0
+html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=false
 progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
-progressive_web_app/display=1
+progressive_web_app/display=3
 progressive_web_app/orientation=0
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
